--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.application.name=SpringSecurityApp
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=myuser
-spring.datasource.password=rootpass
+spring.datasource.password=mypassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+#Security Config
+spring.security.user.name=lea
+spring.security.user.password=12345
