--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.password=mypassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 #Security Config
-spring.security.user.name=lea
-spring.security.user.password=12345
+#spring.security.user.name=lea
+#spring.security.user.password=12345
