--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=SpringSecurityApp
 
 #DATABASE CONFIGURATION
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=myuser
 spring.datasource.password=mypassword
